--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="../css/style.css">
 
     <title>GALERIA DECORARTE</title>
 </head>
 <body>
 <header>
     <div class="header-container">
-        <img class="fondo" src="../img/fondo.jpg" alt="Fondo de web">
-        <img class="loguito" src="../img/logo de instagram.png" alt="logo de decorarte">
+        <img class="fondo" src="../img/fondo-bosque.jpeg" alt="Fondo de web">
+        <img class="loguito animate__animated animate__tada animate__infinite" src="../img/logonuevo.png" alt="logo de decorarte">
     
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -41,8 +42,8 @@
 </header>
 
 <main>
-    <h1>NUESTROS EVENTOS</h1>
-    <h2>GALERIA DE FOTOS</h2>
+    <h1 class="animate__animated animate__lightSpeedInRight animate__delay-2s">NUESTROS EVENTOS</h1>
+    <h2 class="animate__animated animate__lightSpeedInLeft animate__delay-3s">GALERIA DE FOTOS</h2>
 
 
     <div id="carouselExample" class="carousel slide">
