--- a/pages/nosotras.html
+++ b/pages/nosotras.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="../css/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,8 +17,8 @@
 
     <header>
         <div class="header-container">
-            <img class="fondo" src="../img/fondo.jpg" alt="Fondo de web">
-            <img class="loguito" src="../img/logo de instagram.png" alt="logo de decorarte">
+            <img class="fondo" src="../img/fondo-bosque.jpeg" alt="Fondo de web">
+            <img class="loguito animate__animated animate__tada animate__infinite" src="../img/logonuevo.png" alt="logo de decorarte">
         </div>
 
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -48,15 +49,13 @@
     </header>
     
     <main>
-        <h1>¿Quiénes somos?</h1>
-        <br>
-        <br>
-<section class="container">
+        <h1 class="animate__animated animate__lightSpeedInRight animate__delay-1s">¿Quiénes somos?</h1>
+
+    <section class="container">
     <div class="row"> 
         <div class="col-sm-12 col-md-4">
-        <h2>NOSOTRAS</h2>
-        <br>
-        <p>
+        <h2 class="animate__animated animate__lightSpeedInLeft animate__delay-2s">NOSOTRAS</h2>
+        <p class="animate__animated animate__fadeIn animate__delay-2s">
         Decorarte nace de la mano de dos mujeres emprendedoras y amigas para hacer que cada evento sea único y quede tal cual lo soñó el cliente. Cuenta con el mobiliario necesario para
         hacer que ese rincón del evento llame la atención y tenga todo lo necesario para el momento
         de sacar una foto y que quede retratado ese recuerdo que todos quieren.
@@ -64,9 +63,8 @@
     </div>
 
     <div class="col-sm-12 col-md-4">
-        <h2>UBICACIÓN</h2>
-        <br>
-        <p>
+        <h2 class="animate__animated animate__lightSpeedInLeft animate__delay-3s">UBICACIÓN</h2>
+        <p class="animate__animated animate__fadeIn animate__delay-3s">
             Estamos ubicadas en San Miguel, Buenos Aires, pero podemos llevar nuestras
             decoraciones a varias zonas, ya que contamos con movilidad propia. Asimismo tenemos una
             página en Instagram donde se pueden ver todos nuestros trabajos realizados y donde nos
@@ -75,9 +73,8 @@
     </div>
 
     <div class="col-sm-12 col-md-4">
-        <h2>SERVICIO</h2>
-        <br>
-        <p>
+        <h2 class="animate__animated animate__lightSpeedInLeft animate__delay-4s">SERVICIO</h2>
+        <p class="animate__animated animate__fadeIn animate__delay-4s">
             Decorarte está pensado para un amplio público, baby shower,
             casamientos, cumpleaños, civiles, revelación de sexo, bautismos, comuniones, tanto para
             grandes como para niños. Nuestro público objetivo son hombres o mujeres de entre 20 y 60
