--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="../css/style.css">
    
 
     <title>NUESTROS PRODUCTOS</title>
@@ -13,8 +14,8 @@
 
 <header>
     <div class="header-container">
-        <img class="fondo" src="../img/fondo.jpg" alt="Fondo de web">
-        <img class="loguito" src="../img/logo de instagram.png" alt="logo de decorarte">
+        <img class="fondo" src="../img/fondo-bosque.jpeg" alt="Fondo de web">
+        <img class="loguito animate__animated animate__tada animate__infinite" src="../img/logonuevo.png" alt="logo de decorarte">
     </div>
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -44,12 +45,12 @@
 </header>
 
 <main class="orden">
-    <h1>EVENTOS</h1>
-    <h2>PROPUESTAS</h2>
+    <h1 class="animate__animated animate__lightSpeedInRight animate__delay-1s">EVENTOS</h1>
+    <h2 class="animate__animated animate__lightSpeedInLeft animate__delay-2s">PROPUESTAS</h2>
 
-    <h3>AMBIENTACIÓN ESTÁNDAR</h3>
-    <h4>Incluye:</h4>
-    <ul> 
+    <h3 class="animate__animated animate__fadeIn animate__delay-2s">AMBIENTACIÓN ESTÁNDAR</h3>
+    <h4 class="animate__animated animate__fadeIn animate__delay-2s" >Incluye:</h4>
+    <ul class="animate__animated animate__fadeIn animate__delay-2s"> 
         <li>Decoración</li>
         <li>Alzadas</li>
         <li>Bandejas</li>
@@ -57,18 +58,18 @@
         <li>Mobiliario (dos paneles y un cilindro)</li>
         <li>Una guirnalda de globos de hasta dos colores (si se quieren agregar más colores o guirnaldas consultar costo adicional)</li>
     </ul>
-    <h4>Valor $95000</h4>
+    <h4 class="animate__animated animate__fadeIn animate__delay-2s">Valor $95000</h4>
 
     <div class="propuestas">
-    <img src="../img/margaritas.jpeg" alt="Ambientación Estándar"> 
+    <img src="../img/margaritas.jpeg"  alt="Ambientación Estándar"> 
     <img src="../img/pink.jpeg" alt="Ambientación Estándar">
     <img src="../img/shine.jpeg" alt="Ambientación Estándar">
 </div>
    
 
-    <h3>AMBIENTACIÓN MEGA</h3>
-    <h4>Incluye:</h4>
-    <ul> 
+    <h3 class="animate__animated animate__fadeIn animate__delay-4s">AMBIENTACIÓN MEGA</h3>
+    <h4 class="animate__animated animate__fadeIn animate__delay-4s">Incluye:</h4>
+    <ul class="animate__animated animate__fadeIn animate__delay-4s"> 
         <li>Decoración</li>
         <li>Alzadas</li>
         <li>Bandejas</li>
@@ -78,18 +79,18 @@
         <li>Mobiliario (tres paneles y tres cilindros)</li>
         <li>Dos guirnaldas de globos de hasta dos colores (si se quieren agregar más colores o guirnaldas consultar costo adicional)</li>
     </ul> 
-    <h4>Valor $120000</h4>
+    <h4 class="animate__animated animate__fadeIn animate__delay-4s">Valor $120000</h4>
 
     <div class="propuestas">
-    <img src="../img/dinosaurios.jpeg" alt="Ambientación Mega">
+    <img src="../img/dinosaurios.jpeg"  alt="Ambientación Mega"> 
     <img src="../img/argentina.jpeg" alt="Ambientación Mega">
     <img src="../img/granja.jpeg" alt="Ambientación Mega">
     <img src="../img/safari.jpeg" alt="Ambientación Mega">
 </div>
    
-    <h3>AMBIENTACIÓN PREMIUM</h3>
-    <h4>Incluye:</h4>
-    <ul> 
+    <h3 class="animate__animated animate__fadeIn animate__delay-5s" >AMBIENTACIÓN PREMIUM</h3>
+    <h4 class="animate__animated animate__fadeIn animate__delay-5s" >Incluye:</h4>
+    <ul class="animate__animated animate__fadeIn animate__delay-5s" > 
         <li>Decoración</li>
         <li>Alzadas</li>
         <li>Bandejas</li>
@@ -99,15 +100,15 @@
         <li>Mobiliario (cinco paneles y tres cilindros y una mesa)</li>
         <li>Tres guirnaldas de globos de hasta dos colores (si se quieren agregar más colores o guirnaldas consultar costo adicional)</li>
     </ul> 
-    <h4>Valor $150000</h4>
+    <h4 class="animate__animated animate__fadeIn animate__delay-5s" >Valor $150000</h4>
 
     <div class="propuestas">
     <img src="../img/bosque.jpeg" alt="Ambientación Premium">
     <img src="../img/mariobross.jpeg" alt="Ambientación Premium">
 </div>
    
-    <h3>Información importante</h3>
-    <ul class="info"> 
+    <h3 class="animate__animated animate__fadeIn animate__delay-5s" >Información importante</h3>
+    <ul class="info animate__animated animate__fadeIn animate__delay-5s"> 
         <li>Las reservas de fechas se hacen solamente con señas de $50000</li>
         <li>Eventos con escaleras en primer piso o más consultar valor adicional</li>
         <li>Una semana antes, el evento tiene que estar saldado</li>
