--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
     <title>AMBIENTACIONES DECORARTE</title>
+
+    <meta name="description" content="Explora nuestras ambientaciones para eventos con diseños únicos y personalizados. Descubre cómo transformar tus celebraciones en experiencias inolvidables con DecorArte.">
+    <meta name="keywords" content="ambientaciones, decoración de eventos, diseño de eventos, DecorArte, ambientaciones personalizadas, decoración para bodas, fiestas temáticas, eventos especiales, diseño de interiores, decoración profesional">
+
+    
+    <meta property="og:title" content="Transforma tus eventos con DecorArte">
+    <meta property="og:description" content="Con DecorArte, tus eventos se convertirán en experiencias inolvidables. Descubre nuestras ambientaciones personalizadas para cada ocasión especial.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://tomasquintero2024.github.io/entrega-tres/">
+    <meta property="og:image" content="https://github.com/tomasquintero2024/entrega-tres/blob/master/img/bosque.jpeg"> 
+    <meta property="og:site_name" content="DecorArte">
+    <meta property="og:locale" content="es_AR">
+
+    <meta property="og:see_also" content="https://www.tiktok.com/@decorarte.ambientaciones?_t=8oLf3QaRd8H&_r=1">
+    <meta property="og:see_also" content="https://www.instagram.com/ambientacion.decorarte?igsh=YnE1YTV3NGJ4NnZ4">
+
+
 </head>
 <body>
     <header>
@@ -58,7 +75,7 @@
             </div>
                         
             <div class="text-content">
-                <h2 class="animate__animated animate__lightSpeedInLeft animate__delay-2s">AMBIENTACIONES PARA EVENTOS</h2>
+                <h2 class="animate__animated animate__lightSpeedInLeft animate__delay-2s">AMBIENTACIONES Y EVENTOS</h2>
                 <p class="animate__animated animate__fadeIn animate__delay-2s">Te preparamos tu evento para que sea único: baby shower, casamientos, cumpleaños, civiles, revelación de sexo, bautismos, comuniones, tanto para grandes como para niños.</p>
                 <p class="animate__animated animate__fadeIn animate__delay-3s">Decorarte tiene la capacidad de brindar un buen servicio de calidad con atención personalizada, respondiendo dudas que le surjan a cada cliente y adaptándose a las necesidades del mismo. Diseños únicos inspirados en lo que el cliente desea.</p>
                 <p class="animate__animated animate__fadeIn animate__delay-4s">Precios accesibles. Más bajos que la competencia.</p>
