final de proyecto

--- a/pages/nosotras.html
+++ b/pages/nosotras.html
@@ -17,7 +17,7 @@
 
     <header>
         <div class="header-container">
-            <img class="fondo" src="../img/fondo-bosque.jpeg" alt="Fondo de web">
+            <img class="fondo" src="../img/fondo-bosque.avif" alt="Fondo de web">
             <img class="loguito animate__animated animate__tada animate__infinite" src="../img/logonuevo.png" alt="logo de decorarte">
         </div>
 
