--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
     <header>
         <div class="header-container">
-            <img class="fondo" src="./img/fondo-bosque.jpeg" alt="Fondo de web">
+            <img class="fondo" src="./img/fondo-bosque.avif" alt="Fondo de web">
             <img class="loguito animate__animated animate__tada animate__infinite" src="./img/logonuevo.png" alt="logo de decorarte">
             
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
