--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -16,7 +16,7 @@
 <body>
 <header>
     <div class="header-container">
-        <img class="fondo" src="../img/fondo-bosque.jpeg" alt="Fondo de web">
+        <img class="fondo" src="../img/fondo-bosque.avif" alt="Fondo de web">
         <img class="loguito animate__animated animate__tada animate__infinite" src="../img/logonuevo.png" alt="logo de decorarte">
     
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -53,37 +53,37 @@
     <div id="carouselExample" class="carousel slide">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../img/argentina.jpeg" class="d-block w-100" alt="argentina">
+          <img src="../img/argentina.avif" class="d-block w-100" alt="argentina">
         </div>
         <div class="carousel-item">
-          <img src="../img/bosque.jpeg" class="d-block w-100" alt="bosque">
+          <img src="../img/bosque.avif" class="d-block w-100" alt="bosque">
         </div>
         <div class="carousel-item">
-          <img src="../img/dinosaurios.jpeg" class="d-block w-100" alt="dinosaurio">
+          <img src="../img/dinosaurios.avif" class="d-block w-100" alt="dinosaurio">
         </div>
         <div class="carousel-item">
-          <img src="../img/granja.jpeg" class="d-block w-100" alt="granja">
+          <img src="../img/granja.avif" class="d-block w-100" alt="granja">
         </div>
         <div class="carousel-item">
-          <img src="../img/mar.jpeg" class="d-block w-100" alt="mar">
+          <img src="../img/mar.avif" class="d-block w-100" alt="mar">
         </div>
         <div class="carousel-item">
-          <img src="../img/pink.jpeg" class="d-block w-100" alt="pink">
+          <img src="../img/pink.avif" class="d-block w-100" alt="pink">
         </div>
         <div class="carousel-item">
-          <img src="../img/mariobross.jpeg" class="d-block w-100" alt="mariobross">
+          <img src="../img/mariobross.avif" class="d-block w-100" alt="mariobross">
         </div>
         <div class="carousel-item">
-          <img src="../img/margaritas.jpeg" class="d-block w-100" alt="margaritas">
+          <img src="../img/margaritas.avif" class="d-block w-100" alt="margaritas">
         </div>
         <div class="carousel-item">
-          <img src="../img/red.jpeg" class="d-block w-100" alt="red">
+          <img src="../img/red.avif" class="d-block w-100" alt="red">
         </div>
         <div class="carousel-item">
-          <img src="../img/safari.jpeg" class="d-block w-100" alt="safari">
+          <img src="../img/safari.avif" class="d-block w-100" alt="safari">
         </div>
         <div class="carousel-item">
-          <img src="../img/shine.jpeg" class="d-block w-100" alt="shine">
+          <img src="../img/shine.avif" class="d-block w-100" alt="shine">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
