--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -17,7 +17,7 @@
 
 <header>
     <div class="header-container">
-        <img class="fondo" src="../img/fondo-bosque.jpeg" alt="Fondo de web">
+        <img class="fondo" src="../img/fondo-bosque.avif" alt="Fondo de web">
         <img class="loguito animate__animated animate__tada animate__infinite" src="../img/logonuevo.png" alt="logo de decorarte">
     </div>
 
@@ -64,15 +64,15 @@
     <h4 class="animate__animated animate__fadeIn animate__delay-2s">Valor $95000</h4>
 
     <div class="propuestas">
-    <img src="../img/margaritas.jpeg"  alt="Ambientación Estándar"> 
-    <img src="../img/pink.jpeg" alt="Ambientación Estándar">
-    <img src="../img/shine.jpeg" alt="Ambientación Estándar">
+    <img src="../img/margaritas.avif"  alt="Ambientación Estándar"> 
+    <img src="../img/pink.avif" alt="Ambientación Estándar">
+    <img src="../img/shine.avif" alt="Ambientación Estándar">
 </div>
    
 
-    <h3 class="animate__animated animate__fadeIn animate__delay-4s">AMBIENTACIÓN MEGA</h3>
-    <h4 class="animate__animated animate__fadeIn animate__delay-4s">Incluye:</h4>
-    <ul class="animate__animated animate__fadeIn animate__delay-4s"> 
+    <h3 class="animate__animated animate__fadeIn animate__delay-1s">AMBIENTACIÓN MEGA</h3>
+    <h4 class="animate__animated animate__fadeIn animate__delay-1s">Incluye:</h4>
+    <ul class="animate__animated animate__fadeIn animate__delay-1s"> 
         <li>Decoración</li>
         <li>Alzadas</li>
         <li>Bandejas</li>
@@ -85,15 +85,15 @@
     <h4 class="animate__animated animate__fadeIn animate__delay-4s">Valor $120000</h4>
 
     <div class="propuestas">
-    <img src="../img/dinosaurios.jpeg"  alt="Ambientación Mega"> 
-    <img src="../img/argentina.jpeg" alt="Ambientación Mega">
-    <img src="../img/granja.jpeg" alt="Ambientación Mega">
-    <img src="../img/safari.jpeg" alt="Ambientación Mega">
+    <img src="../img/dinosaurios.avif"  alt="Ambientación Mega"> 
+    <img src="../img/argentina.avif" alt="Ambientación Mega">
+    <img src="../img/granja.avif" alt="Ambientación Mega">
+    <img src="../img/safari.avif" alt="Ambientación Mega">
 </div>
    
-    <h3 class="animate__animated animate__fadeIn animate__delay-5s" >AMBIENTACIÓN PREMIUM</h3>
-    <h4 class="animate__animated animate__fadeIn animate__delay-5s" >Incluye:</h4>
-    <ul class="animate__animated animate__fadeIn animate__delay-5s" > 
+    <h3 class="animate__animated animate__fadeIn animate__delay-1s" >AMBIENTACIÓN PREMIUM</h3>
+    <h4 class="animate__animated animate__fadeIn animate__delay-1s" >Incluye:</h4>
+    <ul class="animate__animated animate__fadeIn animate__delay-1s" > 
         <li>Decoración</li>
         <li>Alzadas</li>
         <li>Bandejas</li>
@@ -106,12 +106,12 @@
     <h4 class="animate__animated animate__fadeIn animate__delay-5s" >Valor $150000</h4>
 
     <div class="propuestas">
-    <img src="../img/bosque.jpeg" alt="Ambientación Premium">
-    <img src="../img/mariobross.jpeg" alt="Ambientación Premium">
+    <img src="../img/bosque.avif" alt="Ambientación Premium">
+    <img src="../img/mariobross.avif" alt="Ambientación Premium">
 </div>
    
-    <h3 class="animate__animated animate__fadeIn animate__delay-5s" >Información importante</h3>
-    <ul class="info animate__animated animate__fadeIn animate__delay-5s"> 
+    <h3 class="animate__animated animate__fadeIn animate__delay-1s" >Información importante</h3>
+    <ul class="info animate__animated animate__fadeIn animate__delay-1s"> 
         <li>Las reservas de fechas se hacen solamente con señas de $50000</li>
         <li>Eventos con escaleras en primer piso o más consultar valor adicional</li>
         <li>Una semana antes, el evento tiene que estar saldado</li>
