--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -50,12 +50,12 @@
     
         <section class="videos-section">
             <div class="video-container">
-                <video autoplay muted loop>
+                <video controls loading="lazy" autoplay muted loop>
                     <source src="../videos/video bosque.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="video-container">
-                <video autoplay muted loop>
+                <video controls loading="lazy" autoplay muted loop>
                     <source src="../videos/video dinosaurio.mp4" type="video/mp4">
                 </video>
             </div>
