--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -53,37 +53,37 @@
     <div id="carouselExample" class="carousel slide">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../img/argentina.avif" class="d-block w-100" alt="argentina">
+          <img src="../img/argentina.avif" class="d-block w-100" alt="argentina" loading="lazy" >
         </div>
         <div class="carousel-item">
-          <img src="../img/bosque.avif" class="d-block w-100" alt="bosque">
+          <img src="../img/bosque.avif" class="d-block w-100" alt="bosque" loading="lazy">
         </div>
         <div class="carousel-item">
-          <img src="../img/dinosaurios.avif" class="d-block w-100" alt="dinosaurio">
+          <img src="../img/dinosaurios.avif" class="d-block w-100" alt="dinosaurio" loading="lazy">
         </div>
         <div class="carousel-item">
-          <img src="../img/granja.avif" class="d-block w-100" alt="granja">
+          <img src="../img/granja.avif" class="d-block w-100" alt="granja" loading="lazy">
         </div>
         <div class="carousel-item">
-          <img src="../img/mar.avif" class="d-block w-100" alt="mar">
+          <img src="../img/mar.avif" class="d-block w-100" alt="mar" loading="lazy">
         </div>
         <div class="carousel-item">
-          <img src="../img/pink.avif" class="d-block w-100" alt="pink">
+          <img src="../img/pink.avif" class="d-block w-100" alt="pink" loading="lazy">
         </div>
         <div class="carousel-item">
-          <img src="../img/mariobross.avif" class="d-block w-100" alt="mariobross">
+          <img src="../img/mariobross.avif" class="d-block w-100" alt="mariobross" loading="lazy">
         </div>
         <div class="carousel-item">
-          <img src="../img/margaritas.avif" class="d-block w-100" alt="margaritas">
+          <img src="../img/margaritas.avif" class="d-block w-100" alt="margaritas" loading="lazy">
         </div>
         <div class="carousel-item">
-          <img src="../img/red.avif" class="d-block w-100" alt="red">
+          <img src="../img/red.avif" class="d-block w-100" alt="red" loading="lazy" >
         </div>
         <div class="carousel-item">
-          <img src="../img/safari.avif" class="d-block w-100" alt="safari">
+          <img src="../img/safari.avif" class="d-block w-100" alt="safari" loading="lazy">
         </div>
         <div class="carousel-item">
-          <img src="../img/shine.avif" class="d-block w-100" alt="shine">
+          <img src="../img/shine.avif" class="d-block w-100" alt="shine" loading="lazy">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
