--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -64,9 +64,9 @@
     <h4 class="animate__animated animate__fadeIn animate__delay-2s">Valor $95000</h4>
 
     <div class="propuestas">
-    <img src="../img/margaritas.avif"  alt="Ambientación Estándar"> 
-    <img src="../img/pink.avif" alt="Ambientación Estándar">
-    <img src="../img/shine.avif" alt="Ambientación Estándar">
+    <img src="../img/margaritas.avif"  alt="Ambientación Estándar" loading="lazy"> 
+    <img src="../img/pink.avif" alt="Ambientación Estándar" loading="lazy">
+    <img src="../img/shine.avif" alt="Ambientación Estándar" loading="lazy">
 </div>
    
 
@@ -85,10 +85,9 @@
     <h4 class="animate__animated animate__fadeIn animate__delay-4s">Valor $120000</h4>
 
     <div class="propuestas">
-    <img src="../img/dinosaurios.avif"  alt="Ambientación Mega"> 
-    <img src="../img/argentina.avif" alt="Ambientación Mega">
-    <img src="../img/granja.avif" alt="Ambientación Mega">
-    <img src="../img/safari.avif" alt="Ambientación Mega">
+    <img src="../img/dinosaurios.avif"  alt="Ambientación Mega" loading="lazy"> 
+    <img src="../img/argentina.avif" alt="Ambientación Mega" loading="lazy" >
+    <img src="../img/safari.avif" alt="Ambientación Mega" loading="lazy">
 </div>
    
     <h3 class="animate__animated animate__fadeIn animate__delay-1s" >AMBIENTACIÓN PREMIUM</h3>
@@ -106,8 +105,8 @@
     <h4 class="animate__animated animate__fadeIn animate__delay-5s" >Valor $150000</h4>
 
     <div class="propuestas">
-    <img src="../img/bosque.avif" alt="Ambientación Premium">
-    <img src="../img/mariobross.avif" alt="Ambientación Premium">
+    <img src="../img/bosque.avif" alt="Ambientación Premium" loading="lazy">
+    <img src="../img/mariobross.avif" alt="Ambientación Premium" loading="lazy" >
 </div>
    
     <h3 class="animate__animated animate__fadeIn animate__delay-1s" >Información importante</h3>
