--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -70,9 +70,9 @@
 </div>
    
 
-    <h3 class="animate__animated animate__fadeIn animate__delay-1s">AMBIENTACIÓN MEGA</h3>
-    <h4 class="animate__animated animate__fadeIn animate__delay-1s">Incluye:</h4>
-    <ul class="animate__animated animate__fadeIn animate__delay-1s"> 
+    <h3> AMBIENTACIÓN MEGA</h3>
+    <h4> Incluye: </h4>
+    <ul> 
         <li>Decoración</li>
         <li>Alzadas</li>
         <li>Bandejas</li>
@@ -82,7 +82,7 @@
         <li>Mobiliario (tres paneles y tres cilindros)</li>
         <li>Dos guirnaldas de globos de hasta dos colores (si se quieren agregar más colores o guirnaldas consultar costo adicional)</li>
     </ul> 
-    <h4 class="animate__animated animate__fadeIn animate__delay-4s">Valor $120000</h4>
+    <h4> Valor $120000 </h4>
 
     <div class="propuestas">
     <img src="../img/dinosaurios.avif"  alt="Ambientación Mega" loading="lazy"> 
@@ -90,9 +90,9 @@
     <img src="../img/safari.avif" alt="Ambientación Mega" loading="lazy">
 </div>
    
-    <h3 class="animate__animated animate__fadeIn animate__delay-1s" >AMBIENTACIÓN PREMIUM</h3>
-    <h4 class="animate__animated animate__fadeIn animate__delay-1s" >Incluye:</h4>
-    <ul class="animate__animated animate__fadeIn animate__delay-1s" > 
+    <h3> AMBIENTACIÓN PREMIUM</h3>
+    <h4> Incluye: </h4>
+    <ul> 
         <li>Decoración</li>
         <li>Alzadas</li>
         <li>Bandejas</li>
@@ -102,7 +102,7 @@
         <li>Mobiliario (cinco paneles y tres cilindros y una mesa)</li>
         <li>Tres guirnaldas de globos de hasta dos colores (si se quieren agregar más colores o guirnaldas consultar costo adicional)</li>
     </ul> 
-    <h4 class="animate__animated animate__fadeIn animate__delay-5s" >Valor $150000</h4>
+    <h4> Valor $150000</h4>
 
     <div class="propuestas">
     <img src="../img/bosque.avif" alt="Ambientación Premium" loading="lazy">
@@ -110,7 +110,7 @@
 </div>
    
     <h3 class="animate__animated animate__fadeIn animate__delay-1s" >Información importante</h3>
-    <ul class="info animate__animated animate__fadeIn animate__delay-1s"> 
+    <ul> 
         <li>Las reservas de fechas se hacen solamente con señas de $50000</li>
         <li>Eventos con escaleras en primer piso o más consultar valor adicional</li>
         <li>Una semana antes, el evento tiene que estar saldado</li>
@@ -127,7 +127,7 @@
     <textarea name="email" id="email"></textarea>
     <input type="submit" value="Enviar">
 </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
 </body>
 </html>
 
